stop overflow body v3

--- a/src/styles.styl
+++ b/src/styles.styl
@@ -2,5 +2,5 @@ html,
 body {
   position: relative;
   height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
